# fullstack-javascript

./: .gitignore
db_management/optimization/: explanation.md
design_patterns/: index.md
design_patterns/API_Gateway/: explanation.md
design_patterns/Abstract_Factory/: explanation.md
design_patterns/Adapter/: explanation.md
design_patterns/Bridge/: explanation.md
design_patterns/Builder/: explanation.md
design_patterns/Bulkhead/: explanation.md
design_patterns/CQRS/: explanation.md
design_patterns/Cache_Aside/: explanation.md
design_patterns/Chain_of_Responsibility/: explanation.md
design_patterns/Circuit_Breaker/: explanation.md
design_patterns/Clean_Architecture/: explanation.md
design_patterns/Command/: explanation.md
design_patterns/Composite/: explanation.md
django/Admin/: explanation.md
docker/: explanation.md
engineering-notes/: ai.md  css.md  frontend-patterns.md  html.md  javascript.md  modern-web-engineering.md  next.js.md  node.js.md  react.md  typescript.md
php/: index.md
questions/: modern-web-engineering.md  next.js-app.md  nextjs.md  node.js.md  typescript.md
samples/django/crud/: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
samples/django/crud/crud_project/: asgi.py  settings.py  urls.py  wsgi.py
samples/django/crud/templates/: 404.html  base.html  login.html  post_form.html  posts_list.html  user_form.html  users_list.html
samples/django/crud/users/: admin.py  middleware.py  models.py  views.py
samples/django/crud/users/migrations/: 0001_initial.py  0002_post.py  0003_appuser_profile.py
(+553 files in other folders)
